tests/ui/cast/cast-as-bool.stderr
error[E0054]: cannot cast as `bool`
  --> $DIR/cast-as-bool.rs:2:13
   |
LL |     let u = 5 as bool;
   |             ^^^^^^^^^ help: compare with zero instead: `5 != 0`

error[E0054]: cannot cast as `bool`
  --> $DIR/cast-as-bool.rs:5:13
   |
LL |     let t = (1 + 2) as bool;
   |             ^^^^^^^^^^^^^^^ help: compare with zero instead: `(1 + 2) != 0`

error[E0606]: casting `&'static str` as `bool` is invalid
  --> $DIR/cast-as-bool.rs:8:13
   |
LL |     let v = "hello" as bool;
   |             ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0054, E0606.
For more information about an error, try `rustc --explain E0054`.
